# RevOps-CRM-Analyst-Skill-for-Hubspot

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/commands/: hubspot-ask.md  hubspot-report.md  hubspot-schema.md  hubspot-setup.md
hubspot_revops/: __init__.py  auth.py  cli.py  client.py  nl_interface.py
hubspot_revops/extractors/: __init__.py  activities.py  base.py  companies.py  contacts.py  custom_objects.py  deals.py  owners.py  pipelines.py
hubspot_revops/metrics/: __init__.py  _quality.py  _utils.py  activity.py  closed_lost.py  conversion.py  forecast.py  forecast_bucket.py  meeting_history.py  pipeline.py  revenue.py  team.py
hubspot_revops/reports/: __init__.py  charts.py  generator.py  templates.py
hubspot_revops/schema/: __init__.py  cache.py  discovery.py  models.py  stage_ids.py
skills/hubspot-revops/: SKILL.md
skills/hubspot-revops/scripts/: install.sh
tests/: conftest.py  test_auth.py  test_bug_fixes.py  test_closed_lost.py  test_forecast_bucket.py  test_metrics.py  test_nl_interface.py  test_rate_limit.py  test_schema.py  test_stage_ids.py
