[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubspot-revops-skill"
version = "0.1.0"
description = "RevOps CRM Analyst Skill for HubSpot — connect, discover schema, compute metrics, answer business questions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "hubspot-api-client>=9.0.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
hubspot-revops = "hubspot_revops.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
