[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubspot-revops-skill"
version = "0.1.0"
description = "RevOps CRM Analyst Skill for HubSpot — connect, discover schema, compute metrics, answer business questions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "hubspot-api-client>=12.0.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
    # Required by pandas.DataFrame.to_markdown() which the activity
    # report uses to render the per-rep activity pivot table. Pandas
    # declares tabulate as an optional dependency so we must pin it
    # here — otherwise the activity report crashes with
    # ``ImportError: Missing optional dependency 'tabulate'`` on a
    # fresh install.
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
hubspot-revops = "hubspot_revops.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
